import type { UUID, ISODateTime } from "./common";

/**
 * Entity: Notification (Aggregate Root).
 * Bounded Context: Notification.
 * Source: 02-domain/entities-and-rules.md + 02-domain/domain-events.md.
 *
 * "In-app notification generated by reservation, payment, or maintenance events."
 *
 * `notificationType` is a fixed set of values controlled by application code (one per
 * notification-producing domain event) — NOT admin-editable, NOT free text. The domain doc gives
 * these as examples (explicitly non-exhaustive): "RESERVATION_CREATED", "PAYMENT_APPROVED",
 * "PAYMENT_REJECTED". It is kept as `string` here rather than a closed union because the domain
 * docs do not enumerate a final, closed list of literal values — only examples.
 *
 * INV-001: a Notification must be related to at least one of the 4 optional FKs below
 * (reservationId / invoiceId / paymentId / maintenanceId). This is a construction-time business
 * rule, not something the type system alone can enforce.
 *
 * `invoiceId` references `Invoice` (Payment & Billing) and `maintenanceId` references
 * `VehicleMaintenance` (Fleet & Maintenance) — both out of scope for this task (not one of the
 * requested entities), kept only as UUID FKs.
 */
export type Notification = {
  notificationId: UUID;
  /** FK Person — recipient. */
  personId: UUID;
  notificationType: string;
  message: string;
  sentDate: ISODateTime;
  isRead: boolean;
  /** At least one of these 4 must be present (INV-001). */
  reservationId?: UUID;
  invoiceId?: UUID;
  paymentId?: UUID;
  maintenanceId?: UUID;
};
