@startuml

hide circle
skinparam linetype ortho

package "Security & Core" {

entity Person {
  +person_id : INT <<PK>>
  first_name : VARCHAR(100)
  last_name : VARCHAR(100)
  email : VARCHAR(150)
  phone : VARCHAR(20)
  branch_id : INT <<FK>>
}

entity User {
  +user_id : INT <<PK>>
  person_id : INT <<FK>>
  username : VARCHAR(50)
  password_hash : VARCHAR(255)
  status : VARCHAR(20)
  last_login : DATETIME
}

entity Driver {
  +driver_id : INT <<PK>>
  person_id : INT <<FK>>
  document_number : VARCHAR(20)
  driver_license : VARCHAR(50)
  license_expiration : DATE
}

entity Role {
  +role_id : INT <<PK>>
  name : VARCHAR(50)
  description : VARCHAR(255)
}

entity Permission {
  +permission_id : INT <<PK>>
  name : VARCHAR(50)
  description : VARCHAR(255)
}

entity Role_Permission {
  +role_id : INT <<FK>>
  +permission_id : INT <<FK>>
}

entity User_Role {
  +user_id : INT <<FK>>
  +role_id : INT <<FK>>
}

entity Audit {
  +audit_id : INT <<PK>>
  user_id : INT <<FK>>
  action : VARCHAR(50)
  affected_table : VARCHAR(50)
  date : DATETIME
  detail : TEXT
}

entity Verification_Code {
  +verification_code_id : INT <<PK>>
  user_id : INT <<FK>>
  code : VARCHAR(10)
  type : VARCHAR(30)
  created_at : DATETIME
  expires_at : DATETIME
  used : BOOLEAN
}

entity Session {
  +session_id : INT <<PK>>
  user_id : INT <<FK>>
  refresh_token : VARCHAR(255)
  created_at : DATETIME
  expires_at : DATETIME
  ip_address : VARCHAR(45)
  user_agent : VARCHAR(255)
  revoked : BOOLEAN
}
}

package "Operational & Fleet" {

entity Branch {
  +branch_id : INT <<PK>>
  name : VARCHAR(100)
  address : VARCHAR(200)
  city : VARCHAR(100)
  phone : VARCHAR(20)
  schedules : VARCHAR(100)
}

entity Brand {
  +brand_id : INT <<PK>>
  name : VARCHAR(50)
}

entity Vehicle_Model {
  +model_id : INT <<PK>>
  brand_id : INT <<FK>>
  name : VARCHAR(50)
}

entity Category {
  +category_id : INT <<PK>>
  name : VARCHAR(50)
  description : VARCHAR(255)
}

entity Engine_Type {
  +engine_type_id : INT <<PK>>
  name : VARCHAR(50)
}

entity Vehicle {
  +vehicle_id : INT <<PK>>
  plate : VARCHAR(10)
  model_id : INT <<FK>>
  category_id : INT <<FK>>
  engine_type_id : INT <<FK>>
  capacity : INT
  year : INT
  image_url : VARCHAR(255)
  status : VARCHAR(30)
  mileage : DECIMAL(10,2)
  daily_price : DECIMAL(10,2)
  branch_id : INT <<FK>>
}

entity Gps {
  +gps_id : INT <<PK>>
  serial : VARCHAR(100)
  model : VARCHAR(50)
  is_active : BOOLEAN
}

entity Location {
  +location_id : INT <<PK>>
  gps_id : INT <<FK>>
  latitude : DECIMAL(10,8)
  longitude : DECIMAL(11,8)
  timestamp : DATETIME
}

entity Vehicle_Maintenance {
  +maintenance_id : INT <<PK>>
  vehicle_id : INT <<FK>>
  maintenance_type_id : INT <<FK>>
  start_date : DATE
  end_date : DATE
  cost : DECIMAL(10,2)
  status : VARCHAR(30)
}

entity Maintenance_Type {
  +maintenance_type_id : INT <<PK>>
  name : VARCHAR(50)
  description : VARCHAR(255)
}

}

package "Commercial & Rental" {

entity Insurance_Type {
  +insurance_type_id : INT <<PK>>
  name : VARCHAR(100)
  coverage_details : TEXT
  daily_cost : DECIMAL(10,2)
}

entity Reservation {
  +reservation_id : INT <<PK>>
  client_id : INT <<FK>>
  driver_id : INT <<FK>>
  vehicle_id : INT <<FK>>
  insurance_type_id : INT <<FK>>
  pickup_branch_id : INT <<FK>>
  return_branch_id : INT <<FK>>
  reservation_date : DATETIME
  start_date : DATETIME
  end_date : DATETIME
  vehicle_subtotal : DECIMAL(10,2)
  insurance_subtotal : DECIMAL(10,2)
  total_amount : DECIMAL(10,2)
  status : VARCHAR(30)
}

entity Contract {
  +contract_id : INT <<PK>>
  reservation_id : INT <<FK>>
  contract_number : VARCHAR(50)
  generated_date : DATETIME
  contract_pdf_url : VARCHAR(255)
  signature_status : VARCHAR(20)
  signed_date : DATETIME
  signer_ip : VARCHAR(45)
}

entity Rental {
  +rental_id : INT <<PK>>
  reservation_id : INT <<FK>>
  gps_id : INT <<FK>>
  actual_start_date : DATETIME
  actual_end_date : DATETIME
  initial_mileage : DECIMAL(10,2)
  final_mileage : DECIMAL(10,2)
  status : VARCHAR(30)
}

entity Payment_Method {
  +method_id : INT <<PK>>
  name : VARCHAR(50)
}

entity Payment {
  +payment_id : INT <<PK>>
  reservation_id : INT <<FK>>
  method_id : INT <<FK>>
  payment_date : DATETIME
  amount : DECIMAL(10,2)
  reference_number : VARCHAR(100)
  payment_type : VARCHAR(30)
}

entity Notification {
  +notification_id : INT <<PK>>
  person_id : INT <<FK>>
  message : TEXT
  sent_date : DATETIME
  is_read : BOOLEAN
  reservation_id : INT <<FK>>
  contract_id : INT <<FK>>
  payment_id : INT <<FK>>
  maintenance_id : INT <<FK>>
}
}

' Relaciones de Seguridad y Usuarios
Branch ||--{ Person
Person ||--|| User
Person ||--{ Driver
User ||--{ User_Role
Role ||--{ User_Role
Role ||--{ Role_Permission
Permission ||--{ Role_Permission
User ||--{ Audit
User ||--{ Verification_Code
User ||--{ Session

' Relaciones Vehículo & Flota
Brand ||--{ Vehicle_Model
Vehicle_Model ||--{ Vehicle
Category ||--{ Vehicle
Engine_Type ||--{ Vehicle
Branch ||--{ Vehicle
Vehicle ||--{ Vehicle_Maintenance
Maintenance_Type ||--{ Vehicle_Maintenance
Gps ||--{ Location

' Relaciones Comerciales
Insurance_Type ||--{ Reservation
Person ||--{ Reservation : "client_id"
Driver ||--{ Reservation : "driver_id"
Vehicle ||--{ Reservation
Branch ||--{ Reservation : pickup
Branch ||--{ Reservation : return
Contract ||--|| Reservation
Rental ||--|| Reservation
Rental }|--|| Gps
Reservation ||--{ Payment
Payment_Method ||--{ Payment
Person ||--{ Notification
Reservation ||--{ Notification
Contract ||--{ Notification
Payment ||--{ Notification
Vehicle_Maintenance ||--{ Notification

@enduml